# berkeleydb_prebuilt

./: CMakeLists.txt
linux/x64/debug/include/: db_config.h
linux/x64/release/include/: db_config.h
mac/x64/debug/include/: db_config.h
mac/x64/release/include/: db_config.h  db_int.h
